# ChangeLog for dev-games/netradiant
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Oct 2012; Marcel Unbehaun <marcel@frostworx.de>
  netradiant-1.5.0_p20120515.ebuild, netradiant-9999.ebuild:
  added depend on subversion

*netradiant-1.5.0_p20120515 (12 Jun 2012)

  12 Jun 2012; Nikoli <nikoli@lavabit.com> metadata.xml,
  -netradiant-1.5.0_p20110127.ebuild, -netradiant-1.5.0_p20110827.ebuild,
  +netradiant-1.5.0_p20120515.ebuild, netradiant-9999.ebuild:
  netradiant: new snapshot, update gamepacks, remove old

*netradiant-1.5.0_p20110827 (14 Sep 2011)

  14 Sep 2011; Nikoli <nikoli@lavabit.com> +netradiant-1.5.0_p20110827.ebuild,
  netradiant-9999.ebuild:
  netradiant: add snapshot (tags/xonotic-v0.5.0), git-2.eclass now has unpack,
  disable

  05 Jul 2011; Nikoli <nikoli@lavabit.com> netradiant-1.5.0_p20110127.ebuild,
  netradiant-9999.ebuild:
  netradiant: migrate to EAPI4 and git-2

  26 Feb 2011; Nikoli <nikoli@lavabit.com> metadata.xml,
  netradiant-9999.ebuild:
  netradiant: update packs

*netradiant-1.5.0_p20110127 (27 Jan 2011)

  27 Jan 2011; Nikoli <nikoli@lavabit.com> +netradiant-1.5.0_p20110127.ebuild:
  netradiant: add snapshot

  27 Jan 2011; Nikoli <nikoli@lavabit.com> metadata.xml,
  netradiant-9999.ebuild:
  netradiant: add USE flags for radiant and every tool, gtk is optional now ,
  add more packs

*netradiant-9999 (26 Jan 2011)

  26 Jan 2011; Nikoli <nikoli@lavabit.com> +metadata.xml,
  +netradiant-9999.ebuild:
  netradiant: initial ebuild
