@@ -46,8 +46,8 @@ RDEPEND="
 "
 DEPEND="${RDEPEND}
 	app-arch/xz-utils
-	dev-util/pkgconfig
 	dev-vcs/subversion
+	virtual/pkgconfig
 	osirion? ( app-arch/unzip )
 	quake1? ( app-arch/unzip )
 	warsow? ( app-arch/unzip )
